<resources>
    <string name="app_name">ColorApp</string>
    <string name="loading_error">Error message: %1$s</string>

    <string name="label_generate_palette">Generate Palette</string>
    <string name="label_palettes">Saved Palettes</string>
    <string name="label_settings">Settings</string>
    <string name="label_import">Import Color</string>
    <string name="label_image_picker">Image to pick color from</string>

    <string name="action_settings">Settings</string>
    <string name="action_palettes">Palettes</string>

    <string name="button_generate">Shuffle</string>
    <string name="button_share">Share</string>
    <string name="button_save">Save</string>
    <string name="button_copy">Copy</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_select">Select Image</string>
    <string name="button_confirm">Confirm Color</string>

    <string name="pref_model_key">pref_model</string>
    <string name="pref_model_title">Colormind Model</string>
    <string name="pref_model_default">default</string>
</resources>
