<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/generate_palette">

    <fragment
        android:id="@+id/generate_palette"
        android:label="@string/label_generate_palette"
        android:name="edu.oregonstate.cs492.ColorPaletteApp.ui.GeneratePaletteFragment">
        <action
            android:id="@+id/navigate_to_palettes"
            app:destination="@id/palettes"/>
        <action
            android:id="@+id/navigate_to_import_color"
            app:destination="@id/import_color"/>
    </fragment>

    <fragment
        android:id="@+id/palettes"
        android:label="@string/label_palettes"
        android:name="edu.oregonstate.cs492.ColorPaletteApp.ui.SavedPaletteFragment">

    </fragment>

    <fragment
        android:id="@+id/settings"
        android:label="@string/label_settings"
        android:name="edu.oregonstate.cs492.ColorPaletteApp.ui.SettingsFragment">
    </fragment>

    <fragment
        android:id="@+id/import_color"
        android:label="@string/label_import"
        android:name="edu.oregonstate.cs492.ColorPaletteApp.ui.ImportColorFragment">
        <argument
            android:name="index"
            app:argType="integer" />
    </fragment>

</navigation>
